# rss-reader

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
app/: settings.py  urls.py
app/base/: services.py
channel/: exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
channel/migrations/: 0001_initial.py
mail/: services.py  tasks.py
mail/templates/templated_email/: reset_password.email  reset_password_success.email  welcome.email
post/: exceptions.py  filters.py  models.py  paginators.py  serializers.py  services.py  tasks.py  urls.py  views.py
post/migrations/: 0001_initial.py
tests/: conftest.py  factories.py  utils.py
tests/api/base/: test_services.py
tests/api/channel/: test_services.py  test_views.py
tests/api/mail/: test_tasks.py
tests/api/post/: test_services.py  test_views.py
tests/api/user/: test_services.py  test_views.py
user/: models.py  serializers.py  services.py  urls.py  utils.py  views.py
user/migrations/: 0001_initial.py
